--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,5 +2,5 @@
 {% block title %} Wild Series{% endblock %}
 
 {% block body %}
-<h1>Bienvenue !</h1>
+<h1>Bienvenue avec symfony sur la page d'acceuil de l'appli !</h1>
 {% endblock %}
